@@ -20,8 +20,6 @@ expose_meth: __hash__
    return new PyInteger(self.object_hashCode());
 expose_meth: __repr__
    return new PyString(self.object_toString());
-expose_meth: __unicode__
-   return new PyUnicode(self.__str__());
 expose_new_mutable:
 expose_wide_meth: __init__ -1 -1
   `vdeleg`(init);
